dataset1235/2025-2/2868285114/users/1746929503/executions/3649835072_1927446959.log
== SUBMISSION (2025-08-19 23:12:38)
-- CODE: 
ValorDeEntreda= float(input()) 

valor1 = valorDeEntreda*(27/100)
valor2 = valorDeEntreda + valorDeEntreda*(42/100)
valor3 = valorDeEntreda - valorDeEntreda*(63/100)

print(round(valor1,2))
print(round(valor2,2))
print(round(valor3,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 03:31:48)
-- CODE: 
valorInicial = float(input())

x = valorInicial * (27/100)
y = valorInicial + valorInicial * (42/100)
z = valorInicial - valorInicial * (63/100)

print(round(x,2))
print(round(y,2))
print(round(z,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 23:13:03)
-- CODE: 
valorDeEntreda= float(input()) 

valor1 = valorDeEntreda*(27/100)
valor2 = valorDeEntreda + valorDeEntreda*(42/100)
valor3 = valorDeEntreda - valorDeEntreda*(63/100)

print(round(valor1,2))
print(round(valor2,2))
print(round(valor3,2))
-- EXECUTION TIME: 
0.0166667
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 03:30:44)
-- CODE: 
valorInicial = float(input())

x = valorInicial * (27/100)
y = valorInicial + valorInicial * (47/100)
z = valorInicial - valorInicial * (63/100)

print(round(x,2))
print(round(y,2))
print(round(z,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 23:12:38)
-- CODE: 
ValorDeEntreda= float(input()) 

valor1 = valorDeEntreda*(27/100)
valor2 = valorDeEntreda + valorDeEntreda*(42/100)
valor3 = valorDeEntreda - valorDeEntreda*(63/100)

print(round(valor1,2))
print(round(valor2,2))
print(round(valor3,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 23:10:34)
-- CODE: 
ValorDeEntrada= float(input()) 

valor1 = valorDeEntrada*(27/100)
valor2 = valorDeEntrada + valorDeEntrada*(42/100)
valor3 = valorDeEntrada - valorDeEntrada*(63/100)

print(round(valor1,2))
print(round(valor2,2))
print(round(valor3,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntrada*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntrada' is not defined. Did you mean: 'ValorDeEntrada'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntrada*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntrada' is not defined. Did you mean: 'ValorDeEntrada'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntrada*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntrada' is not defined. Did you mean: 'ValorDeEntrada'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntrada*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntrada' is not defined. Did you mean: 'ValorDeEntrada'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntrada*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntrada' is not defined. Did you mean: 'ValorDeEntrada'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntrada*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntrada' is not defined. Did you mean: 'ValorDeEntrada'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 23:12:08)
-- CODE: 
ValorDeEntreda= float(input()) 

valor1 = valorDeEntreda*(27/100)
valor2 = valorDeEntreda + valorDeEntreda*(42/100)
valor3 = valorDeEntreda - valorDeEntreda*(63/100)

print(round(valor1,2))
print(round(valor2,2))
print(round(valor3,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 23:12:37)
-- CODE: 
ValorDeEntreda= float(input()) 

valor1 = valorDeEntreda*(27/100)
valor2 = valorDeEntreda + valorDeEntreda*(42/100)
valor3 = valorDeEntreda - valorDeEntreda*(63/100)

print(round(valor1,2))
print(round(valor2,2))
print(round(valor3,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 23:12:06)
-- CODE: 
ValorDeEntreda= float(input()) 

valor1 = valorDeEntreda*(27/100)
valor2 = valorDeEntreda + valorDeEntreda*(42/100)
valor3 = valorDeEntreda - valorDeEntreda*(63/100)

print(round(valor1,2))
print(round(valor2,2))
print(round(valor3,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor1 = valorDeEntreda*(27/100)
             ^^^^^^^^^^^^^^
NameError: name 'valorDeEntreda' is not defined. Did you mean: 'ValorDeEntreda'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 03:30:38)
-- CODE: 
valorInicial = float(input())

x = valorInicial * (27/100)
y = valorInicial + valorInicial * (47/100)
z = valorInicial - valorInicial * (63/100)

print(round(x,2))
print(round(y,2))
print(round(z,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
